Login Routing Added

--- a/authmodule/src/main/resources/templates/index.html
+++ b/authmodule/src/main/resources/templates/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google User</title>
+    <title>Home Screen</title>
 </head>
 <body>
-    <h1>Welcome Google Authenticated User</h1>
-    <h2>More content and formatting to be added soon</h2>
+    <h1>Welcome to authmodule</h1>
+    <h2>This is index.html page</h2>
 </body>
 </html>
