--- a/authmodule/src/main/resources/templates/login.html
+++ b/authmodule/src/main/resources/templates/login.html
@@ -118,7 +118,7 @@
                          </div>
                         </div>
                         <span style="font-size:16px;line-height:48px;" class="abcRioButtonContents">
-                            <span id="not_signed_inhvn89u63z6nq"><a href="/oauth2/authorization/google">Sign in with Google</a></span>
+                            <span id="not_signed_inhvn89u63z6nq"><a th:href="@{/oauth2/authorization/google}" th:if="${#httpServletRequest?.remoteUser == undefined }">Sign in with Google</a></span>
                        </span>
                    </div>
                 </div>
