--- a/authmodule/src/main/resources/templates/index.html
+++ b/authmodule/src/main/resources/templates/index.html
@@ -1,12 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Screen</title>
-</head>
-<body>
-    <h1>Welcome to authmodule</h1>
-    <h2>This is index.html page</h2>
-</body>
-</html>
+<html lang="en"><head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Welcome</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous">
+  </head>
+  <body>
+     <div class="container">
+      <form class="form-signin" method="get">
+        <h2 class="form-signin-heading">Welcome</h2>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" formaction="user.html">User Content</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" formaction="admin.html">Admin Content</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" formaction="logout.html">Sign out</button>
+      </form>
+     
+    
+      
+</div>
+</body></html>
