--- a/authmodule/src/main/resources/templates/admin.html
+++ b/authmodule/src/main/resources/templates/admin.html
@@ -1,20 +1,57 @@
-<html lang="en"><head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Admin Content</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous">
-  </head>
-  <body>
-     <div class="container">
-      <form class="form-signin" method="get">
-        <h2 class="form-signin-heading">Welcome Admin</h2>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" formaction="logout.html" >Sign out</button>
-      </form>
-     
-    
-      
-</div>
-</body></html>
+<!--Customize this page to create your own ADMIN page-->
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<head>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ <meta name="description" content="">
+ <meta name="author" content="">
+ <title>Administrator Content</title>
+ <link rel="stylesheet" th:href="@{/bootstrap.min.css}" >
+ <link rel="stylesheet" th:href="@{/common.css}" >
+ <style>
+  table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  }
+  td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+  }
+  tr:nth-child(even) {
+  background-color: #dddddd;
+  }
+ </style>
+</head>
+ <body>
+  <div class="container">
+   <form class="form-signin" method="get">
+    <h2 class="form-signin-heading">Welcome Administrator</h2>
+    <br>
+    <h3>List of Users and Administrators</h3>
+    <br>
+    <table>
+     <tr>
+ 	 <th>Users</th>
+     </tr>
+     <tr th:each="i : ${user}" >
+	  <td><p th:text="${ i }"></p></td>
+     </tr>
+    </table>
+    <br>
+    <br>
+    <table>
+     <tr>
+	  <th>Administrators</th>
+	 </tr>
+	 <tr th:each="i : ${admin}" >
+	  <td><p th:text="${ i }"></p></td>
+	 </tr>
+    </table>
+    <br><br>
+    <button class="btn btn-lg btn-primary btn-block" style="background-color: #FD5D5D;border-color: #FD5D5D;" type="submit" th:formaction="@{/logout}" >Sign out</button>
+   </form>   
+  </div>  
+</body>
+</html>
