--- a/authmodule/src/main/resources/templates/help.html
+++ b/authmodule/src/main/resources/templates/help.html
@@ -1,12 +1,13 @@
+<!--Documentation-->
 <!DOCTYPE html>
 <html lang="en">
 <head >
-   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <meta name="description" content="">
-   <meta name="author" content="">
-  <title>Login</title>
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ <meta name="description" content="">
+ <meta name="author" content="">
+ <title>Login</title>
 <body>
-<h1>Documentation Will be added here</h1> 
-  </body>
+ <h1>Documentation will be added here</h1> 
+</body>
 </html>
