--- a/authmodule/src/main/resources/templates/login.html
+++ b/authmodule/src/main/resources/templates/login.html
@@ -1,135 +1,87 @@
+<!--Customize this page to create your own Login Page-->
+<!--You can easily add more authentication mechanism using this page-->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
-   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <meta name="description" content="">
-   <meta name="author" content="">
-  <title>Login</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" >
-  <style>
-            .abcRioButton{-webkit-border-radius:1px;border-radius:1px;-webkit-box-shadow: 0 2px 4px 0px rgba(0,0,0,.25);box-shadow:0 2px 4px 0 rgba(0,0,0,.25);-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transition:background-color .218s,border-color .218s,box-shadow .218s;transition:background-color .218s,border-color .218s,box-shadow .218s;-webkit-user-select:none;-webkit-appearance:none;background-color:#fff;background-image:none;color:#262626;cursor:pointer;outline:none;overflow:hidden;position:relative;text-align:center;vertical-align:middle;white-space:nowrap;width:auto}
-            .abcRioButton:hover{-webkit-box-shadow:0 0 3px 3px rgba(66,133,244,.3);box-shadow:0 0 3px 3px rgba(66,133,244,.3)}    
-            .abcRioButtonBlue{background-color:#4285f4;border:none;color:#fff}
-            .abcRioButtonBlue:hover{background-color:#4285f4}
-            .abcRioButtonBlue:active{background-color:#3367d6}
-            .abcRioButtonLightBlue{background-color:#fff;color:#757575}
-            .abcRioButtonLightBlue:active{background-color:#eee;color:#6d6d6d}
-            .abcRioButtonIcon{float:left}
-            .abcRioButtonBlue .abcRioButtonIcon{background-color:#fff;-webkit-border-radius:1px;border-radius:1px}
-            .abcRioButtonSvg{display:block}
-            .abcRioButtonContents{font-family:Roboto,arial,sans-serif;font-size:14px;font-weight:500;letter-spacing:.21px;margin-left:6px;margin-right:6px;vertical-align:top}.abcRioButtonContentWrapper{height:100%;width:100%}
-            .abcRioButtonBlue .abcRioButtonContentWrapper{border:1px solid transparent}.abcRioButtonErrorWrapper,.abcRioButtonWorkingWrapper{display:none;height:100%;width:100%}
-            .abcRioButtonErrorIcon,.abcRioButtonWorkingIcon{margin-left:auto;margin-right:auto}
-            .abcRioButtonErrorState,.abcRioButtonWorkingState{border:1px solid #d5d5d5;border:1px solid rgba(0,0,0,.17);-webkit-box-shadow:0 1px 0 rgba(0,0,0,.05);box-shadow:0 1px 0 rgba(0,0,0,.05);color:#262626}
-            .abcRioButtonErrorState:hover,.abcRioButtonWorkingState:hover{border:1px solid #aaa;border:1px solid rgba(0,0,0,.25);-webkit-box-shadow:0 1px 0 rgba(0,0,0,.1);box-shadow:0 1px 0 rgba(0,0,0,.1)}
-            .abcRioButtonErrorState:active,.abcRioButtonWorkingState:active{border:1px solid #aaa;border:1px solid rgba(0,0,0,.25);-webkit-box-shadow:inset 0 1px 0 #ddd;box-shadow:inset 0 1px 0 #ddd;color:#262626}
-            .abcRioButtonWorkingState,.abcRioButtonWorkingState:hover{background-color:#f5f5f5}
-            .abcRioButtonWorkingState:active{background-color:#e5e5e5}
-            .abcRioButtonErrorState,.abcRioButtonErrorState:hover{background-color:#fff}
-            .abcRioButtonErrorState:active{background-color:#e5e5e5}
-            .abcRioButtonWorkingState .abcRioButtonWorkingWrapper,.abcRioButtonErrorState .abcRioButtonErrorWrapper{display:block}
-    </style>
-  <style>
-            body {
-            padding-top: 40px;
-            padding-bottom: 40px;
-            background-color: #eee;
-            }
-            .form-signin {
-            max-width: 500px;
-            padding: 15px;
-            margin: 0 auto;
-            }
-            .form-signin .form-signin-heading,
-            .form-signin .checkbox {
-            margin-bottom: 10px;
-            }
-            .form-signin .checkbox {
-            font-weight: 400;
-            }
-            .form-signin .form-control {
-            position: relative;
-            box-sizing: border-box;
-            height: auto;
-            padding: 10px;
-            font-size: 16px;
-            }
-            .form-signin .form-control:focus {
-            z-index: 2;
-            }
-            .form-signin input[type="email"] {
-            margin-bottom: -1px;
-            border-bottom-right-radius: 0;
-            border-bottom-left-radius: 0;
-            }
-            .form-signin input[type="password"] {
-            margin-bottom: 10px;
-            border-top-left-radius: 0;
-            border-top-right-radius: 0;
-            }
-            .flex-container {
-            display: flex;
-            flex-direction: column;
-              align-items: center;
-              width: auto;
-            }
-     </style>
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
- </head>
-  <body>
-   <div>
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ <meta name="description" content="">
+ <meta name="author" content="">
+ <title>Login</title>
+ <link rel="stylesheet" th:href="@{/bootstrap.min.css}" >
+ <link rel="stylesheet" th:href="@{/common.css}" >
+ <link rel="stylesheet" th:href="@{/google.css}" >
+ <script src="https://apis.google.com/js/platform.js" async defer></script>
+</head>
+<body>
+<div>
+  
+  <!--In-Memory and Database Authentication Providers-->
+  <div >
+   <form name="f" th:action="@{/login}"  class="form-signin" method="post">
+    <fieldset>
+     <h2 class="form-signin-heading">Sign In</h2>
+     <div th:if="${param.error}" class="alert alert-danger" role="alert">Bad credentials</div> 
+     <div th:if="${param.logout}" class="alert alert-success" role="alert">You have been signed out</div>   
+     <p>
+      <label for="username" class="sr-only">UserName</label>
+      <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="">
+     </p>
+     <p>
+      <label for="password" class="sr-only">Password</label>
+      <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
+     </p>
+     <input name="_csrf" type="hidden" value="16e47992-c284-4086-b5ae-ad5837fdcbdc">
+     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    </fieldset>  
+   </form>
+  </div>
+  
+  <!--OAuth 2.0 Authentication Providers-->     
+  <div  class="flex-container">
     <div >
-            <form name="f" th:action="@{/login}"  class="form-signin" method="post">
-              <fieldset>
-              <h2 class="form-signin-heading">Sign In</h2>
-              <div th:if="${param.error}" class="alert alert-danger" role="alert">Bad credentials</div> 
-              <div th:if="${param.logout}" class="alert alert-success" role="alert">You have been signed out</div>   
-              <p>
-                <label for="username" class="sr-only">UserName</label>
-                <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="">
-              </p>
-              <p>
-                <label for="password" class="sr-only">Password</label>
-                <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
-              </p>
-              <input name="_csrf" type="hidden" value="16e47992-c284-4086-b5ae-ad5837fdcbdc">
-              <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-              </fieldset>  
-          </form>
+      <h2 class="form-signin-heading">Login with OAuth 2.0 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+      <!--The following div is an OAuth 2.0 button, you can create as many custom buttons you want-->
+       <div style="height:100;width:475;" class="abcRioButton abcRioButtonBlue">
+        <div class="abcRioButtonContentWrapper">
+          <div class="abcRioButtonIcon" style="padding:15px">
+           <div style="width:18px;height:18px;" class="abcRioButtonSvgImageWithFallback abcRioButtonIconImage abcRioButtonIconImage18">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" viewBox="0 0 48 48" class="abcRioButtonSvg">
+             <g>
+              <path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"></path>
+              <path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"></path>
+              <path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"></path>
+              <path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"></path>
+              <path fill="none" d="M0 0h48v48H0z"></path>
+             </g>
+            </svg>
+           </div>
           </div>
-    <div  class="flex-container">
-            <div >
-              <h2 class="form-signin-heading">Login with OAuth 2.0 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
-              
-              <!--The following div is an OAuth 2.0 button, you can create as many custom buttons you want-->
-              <div style="height:100;width:475;" class="abcRioButton abcRioButtonBlue">
-                <div class="abcRioButtonContentWrapper">
-                  <div class="abcRioButtonIcon" style="padding:15px">
-                    <div style="width:18px;height:18px;" class="abcRioButtonSvgImageWithFallback abcRioButtonIconImage abcRioButtonIconImage18">
-                      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" viewBox="0 0 48 48" class="abcRioButtonSvg">
-                        <g>
-                          <path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"></path>
-                          <path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"></path>
-                          <path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"></path>
-                          <path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"></path>
-                          <path fill="none" d="M0 0h48v48H0z"></path>
-                          </g>
-                         </svg>
-                         </div>
-                        </div>
-                        <span style="font-size:16px;line-height:48px;" class="abcRioButtonContents">
-                        <span id="not_signed_inhvn89u63z6nq">
-                 <!--For each button you need to add the following th:ref for each OAuth 2.0, where th:ref sends a post request to your authentication provider--> 
-                        <a style="color:white;" th:href="@{/oauth2/authorization/google}" th:if="${#httpServletRequest?.remoteUser == undefined }">Sign in with Google</a>
-                        </span>
-                       </span>
-                   </div>
-                </div>
-                
-            </div>
+          <span style="font-size:16px;line-height:48px;" class="abcRioButtonContents">
+          <span id="not_signed_inhvn89u63z6nq">
+          <!--For each button you need to add the following th:ref for each OAuth 2.0, where th:ref sends a post request to your authentication provider--> 
+          <a style="color:white;" th:href="@{/oauth2/authorization/google}">Sign in with Google</a>
+          </span>
+          </span>
         </div>
-
-   </div> 
-  </body>
+       </div>
+   </div>
+  </div>
+  <!--Button for Opening Documentation-->
+  <div>
+  	<form class="form-signin" th:action="@{/help}">
+  	 <br>
+  	 <br>
+  	 <br>
+  	 <br>
+  	 <br>
+  	 <br>
+  	 <br>
+  	 <br> 	 
+  	 <button style="background-color:#9BF088;border-color:#9BF088;" class="btn btn-lg btn-primary btn-block" type="submit">Documentation and Help</button>		
+  	</form>
+  </div>
+  </div> 
+  
+</body>
 </html>
